# swagger.json
@@ -25,6 +25,31 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "tags": ["MovieInput"],
+                "summary": "Cadastrar um novo filme",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/MovieInput"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Filme cadastrado com sucesso"
+                    },
+                    "404": {
+                        "description": "Já existe um filme cadastrado com esse título"
+                    },
+                    "500": {
+                        "description": "Falha ao cadastrar o filme"
+                    }
+                }
             }
         },
         "/movies/{id}": {
